# kaitai_compress

./: .gitignore  README.md
.github/workflows/: main.yml  node.js.yml
_test/: compile-ksy  config  generate-data  run-javascript  run-python  run-ruby  test-javascript.js  test-python.py
_test/compressed/: 25k_uuids.ascii.implode  25k_uuids.binary.implode  25k_uuids.brotli  25k_uuids.framing2.sz  25k_uuids.hadoop.sz  25k_uuids.lz4  25k_uuids.lzham  25k_uuids.lzma  25k_uuids.lzma_raw  25k_uuids.raw.sz  25k_uuids.xz  25k_uuids.zlib  25k_uuids.zst  90_a.ascii.implode  90_a.binary.implode  90_a.brotli  90_a.framing2.sz  90_a.hadoop.sz  90_a.lz4  90_a.lzham  90_a.lzma  90_a.lzma_raw  90_a.raw.sz  90_a.xz  90_a.zlib  90_a.zst  ascii_text.ascii.implode  ascii_text.binary.implode  ascii_text.br  ascii_text.framing2.sz  ascii_text.hadoop.sz  ascii_text.lz4  ascii_text.lzham  ascii_text.lzma  ascii_text.lzma_raw  ascii_text.raw.sz  ascii_text.xz  ascii_text.zlib  ascii_text.zst
_test/docker/: build-images  dockerci
_test/ksy/: test_brotli.ksy  test_implode_ascii.ksy  test_implode_binary.ksy  test_lz4.ksy  test_lzma_lzma.ksy  test_lzma_raw.ksy  test_lzma_xz.ksy  test_snappy.ksy  test_zlib.ksy  (+1 more)
javascript/: package-lock.json  package.json
python/: .gitignore  pyproject.toml
python/kaitai/compress/: __init__.py  brotli.py  lz4.py  lzma_lzma.py  lzma_raw.py  lzma_xz.py  zlib.py
python/kaitai/compress/algorithms/: brotli.py  bz2.py  implode.py  lrzip.py  lz4.py  lzham.py  lzjb.py  lzma.py  lzss.py  snappy.py  zlib.py  zstd.py
python/kaitai/compress/core/: __init__.py
(+14 files in other folders)
