[build-system]
requires = ["setuptools>=61.2.0", "wheel"] # "setuptools_scm[toml]>=3.4.3"
build-backend = "setuptools.build_meta"

[project]
name = "kaitai.compress"
authors = [{name = "Kaitai Project"}]
description = "A library of wrappers of compressors"
readme = "ReadMe.md"
keywords = ["compression", "archive"]
license = {text = "?"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/kaitai-io/kaitai_compress"

[project.optional-dependencies]
lz4 = ["lz4 @ git+https://github.com/python-lz4/python-lz4"]
zstd = ["zstd @ git+https://github.com/sergey-dryabzhinsky/python-zstd"]
brotli = ["brotlipy @ git+https://github.com/python-hyper/brotlipy.git"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["tests"]

#[tool.setuptools_scm]
